# pcre2

./: .gitmodules  Cargo.toml  README.md  receiver.sh
pcre2-sys/: Cargo.toml  build.rs  wrapper.h
pcre2-sys/src/: bindings.rs  lib.rs
src/: main.rs
src/matcher/: mod.rs  pcre2.rs
src/sender/: mod.rs  udp.rs
